--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <title>ES6 Weather App</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+  <link rel="icon" href="favicon.jpg">
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
-
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet/less" type="text/css" href="less/main.less" />
 </head>
 
 <body>
