added radio button
hooked up handlebar helper + js to display celsius / fahanheit

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <label for="location">Location</label>
     <input type="text" id="location" name="location">
     <button type="submit">Get Weather</button>
+    <fieldset class="frm temperature">
+        <input type="radio" name="temperature" value="c"/>Celsius<br>
+        <input type="radio" name="temperature" value="f"/>Fahrenheit<br>
+    </fieldset>
   </form>
 
   <section class="weather-display">
