degree signs / index paths

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <link rel="icon" href="favicon.jpg">
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet/less" type="text/css" href="less/main.less" />
+  <link rel="stylesheet" href="dist/css/normalize.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link rel="stylesheet" href="dist/css/main.css">
 </head>
 
 <body>
@@ -21,8 +21,8 @@
     <input type="text" id="location" name="location">
     <button type="submit">Get Weather</button>
     <fieldset class="frm temperature">
-        <input type="radio" name="temperature" value="c"/>Celsius<br>
-        <input type="radio" name="temperature" value="f"/>Fahrenheit<br>
+        <input type="radio" name="temperature" value="c"/>Celsius
+        <input type="radio" name="temperature" value="f"/>Fahrenheit
     </fieldset>
   </form>
 
@@ -38,10 +38,10 @@
   
 
 
-  <script src="js/vendor/handlebars.runtime-v4.0.12.js"></script>
-  <script src="js/dist/project-template.js"></script>  
-  <script src="js/plugins.js"></script>
-  <script src="js/dist/main.js"></script>
+  <script src="dist/js/vendor/handlebars.runtime-v4.0.12.js"></script>
+  <script src="dist/js/project-template.js"></script>  
+  <script src="dist/js/plugins.js"></script>
+  <script src="dist/js/main.js"></script>
 </body>
 
 </html>
