start of theory 4

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <input type="text" id="location" name="location">
     <button type="submit">Get Weather</button>
     <fieldset class="frm temperature">
-        <input type="radio" name="temperature" value="c"/>Celsius
+        <input type="radio" name="temperature" checked value="c"/>Celsius
         <input type="radio" name="temperature" value="f"/>Fahrenheit
     </fieldset>
   </form>
