--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
   </section>
   
 
+  <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+  <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 
   <script src="dist/js/vendor/handlebars.runtime-v4.0.12.js"></script>
   <script src="dist/js/project-template.js"></script>  
