added the second page for the report

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <input type="radio" name="temperature" value="f"/>Fahrenheit
     </fieldset>
   </form>
+  <div style="margin: 0 auto; width: 400px">  <h2><a href="report.html">See the React Report</a></h2></div>
+
 
   <section class="weather-display">
       <h1>Weather Update</h1>
