babel added to other classes

--- a/report.html
+++ b/report.html
@@ -17,8 +17,40 @@
         <h2><a href="index.html">Go Back</a></h2>
     </div>
 
-  <section class="weather-display">
-      <h2>Break the UI into a component hierarchy</h2>
+    <section class="report-display">
+        <div>
+        <h2>Step 1: Break the UI into a component hierarchy</h2>
+        <img src="./dist/img/component-hierarchy.png"/>
+        <p>Write up about the project</p>
+        <ul>
+        <li><p>Main-App</p></li>
+        <ul>
+            <li><p>Weather-Form</p></li>
+            <li>
+                <p>Weather-Display</p>
+            <ul>
+                <li><p>Forecast</p></li>
+            </ul>
+            </li>
+        </ul>
+        </ul>
+      </div>
+
+      <div>
+        <h2>Step 2: Build A Static Version in React</h2>
+
+      </div>
+      <div>
+          <h2>Step 3: Identify The Minimal (but complete) Representation Of UI State</h2>
+      </div>
+      <div>
+          <h2>Step 4: Identify Where Your State Should Live</h2>
+      </div>
+      <div>
+          <h2>Step 5: Add Inverse Data Flow</h2>
+      </div>
+
+
 
   </section>
   
