--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
 </head>
 
 <body>
-  <form class="frm weather">
+  <div class="react-app">
+
+
+  </div>
+<!--   <form class="frm weather">
     <label for="location">Location</label>
     <input type="text" id="location" name="location">
     <button type="submit">Get Weather</button>
@@ -37,7 +41,7 @@
       <div>Sunrise:</div>
       <div>Sunset:</div>
   </section>
-  
+   -->
 
   <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
   <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
