working on the report section

--- a/report.html
+++ b/report.html
@@ -23,21 +23,24 @@
         <img src="./dist/img/component-hierarchy.png"/>
         <p>Write up about the project</p>
         <ul>
-        <li><p>Main-App</p></li>
+        <li><p>Main-App (orange)</p></li>
         <ul>
-            <li><p>Weather-Form</p></li>
+            <li><p>Weather-Form (red)</p></li>
             <li>
-                <p>Weather-Display</p>
+                <p>Weather-Display (blue)</p>
             <ul>
                 <li><p>Forecast</p></li>
             </ul>
             </li>
         </ul>
         </ul>
+        <p>We decided not to break the forecast into a seperate component but rather using a mapping function to go over the json file.</p>
       </div>
 
       <div>
         <h2>Step 2: Build A Static Version in React</h2>
+        <img src="./dist/img/WeatherApp.PNG"/>
+        <p>This will be a display class which is passed a json file from the main app</p>
 
       </div>
       <div>
