added notes to report

--- a/report.html
+++ b/report.html
@@ -52,7 +52,13 @@
       <div>
           <h2>Step 5: Add Inverse Data Flow</h2>
       </div>
-
+      <div>
+          <h2>Additional Notes:</h2>
+          <p>
+              Instead of building a Static version, we attempted to build a fully functional version of the App.
+              Part way through we encountered some issues that we're not sure how to fix at the moment; such as how we are retrieving the json file from fetch just fine, but it is not being properly sent to the weather app display.
+          </p>
+      </div>
 
 
   </section>
